feat(core): create source and demo

--- a/angular.json
+++ b/angular.json
@@ -23,9 +23,17 @@
               "demo/assets"
             ],
             "styles": [
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/font-awesome/css/font-awesome.css",
+              "./node_modules/tempusdominus-bootstrap-4/build/css/tempusdominus-bootstrap-4.css",
               "demo/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "./node_modules/moment/min/moment.min.js",
+              "./node_modules/tempusdominus-bootstrap-4/build/js/tempusdominus-bootstrap-4.js"
+            ]
           },
           "configurations": {
             "production": {
