--- a/package.json
+++ b/package.json
@@ -11,29 +11,34 @@
   },
   "private": true,
   "dependencies": {
+    "bootstrap": "4.0.0",
+    "tempusdominus-core": "^5.0.0-alpha17",
+    "tempusdominus-bootstrap-4": "^5.0.0-alpha18",
+    "jquery": "^3.0",
+    "popper.js": "^1.12.9",
+    "moment": "^2.17",
+    "moment-timezone": "^0.5.11"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~0.6.0",
     "@angular/animations": "^6.0.0",
+    "@angular/cli": "~6.0.0",
     "@angular/common": "^6.0.0",
     "@angular/compiler": "^6.0.0",
+    "@angular/compiler-cli": "^6.0.0",
     "@angular/core": "^6.0.0",
     "@angular/forms": "^6.0.0",
     "@angular/http": "^6.0.0",
+    "@angular/language-service": "^6.0.0",
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
-    "core-js": "^2.5.4",
-    "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26"
-  },
-  "devDependencies": {
-    "@angular/compiler-cli": "^6.0.0",
-    "@angular-devkit/build-angular": "~0.6.0",
-    "typescript": "~2.7.2",
-    "@angular/cli": "~6.0.0",
-    "@angular/language-service": "^6.0.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
+    "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
@@ -42,7 +47,10 @@
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
+    "rxjs": "^6.0.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2",
+    "zone.js": "^0.8.26"
   }
 }
