--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "e2e": "ng e2e",
     "ngc": "./node_modules/.bin/ngc -p tsconfig.json",
     "build": "ng-packagr -p package.json",
-    "gh-pages": "./node_modules/.bin/ng build --prod --no-aot --base-href=\"/ng-tempusdominus-bootstrap4/\" && ngh --dir demo/dist"
+    "gh-pages": "./node_modules/.bin/ng build --prod --base-href=\"/ng-tempusdominus-bootstrap4/\" && ngh --dir demo/dist/ng-tempusdominus-bootstrap4"
   },
   "homepage": "https://github.com/fetrarij/ng-tempusdominus-bootstrap4",
   "license": "MIT",
