--- a/package.json
+++ b/package.json
@@ -37,9 +37,8 @@
     "url": "https://github.com/fetrarij/ng-tempusdominus-bootstrap4.git"
   },
   "peerDependencies": {
-    "bootstrap": "^4.0.0",
+    "bootstrap": "^3.0.0||^4.0.0",
     "tempusdominus-core": "^5.0.0-alpha17",
-    "tempusdominus-bootstrap-4": "^5.0.0-alpha18",
     "jquery": "^3.0",
     "moment": "^2.17",
     "moment-timezone": "^0.5.11"
