--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ng-tempusdominus-bootstrap4",
-  "version": "1.0.0-alpha.2",
+  "name": "ngx-tempusdominus-bootstrap",
+  "version": "1.0.0-alpha3",
   "description": "Angular2+ directive for tempus dominus bootstrap 4 library.",
   "keywords": [
     "angular2",
