--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-tempusdominus-bootstrap",
-  "version": "1.0.0-alpha3",
+  "version": "1.0.0",
   "description": "Angular2+ directive for tempus dominus bootstrap 4 library.",
   "keywords": [
     "angular2",
@@ -39,7 +39,7 @@
   },
   "peerDependencies": {
     "bootstrap": "^3.0.0||^4.0.0",
-    "tempusdominus-core": "^5.0.0-alpha17",
+    "tempusdominus-core": "^5.0.0",
     "jquery": "^3.0",
     "moment": "^2.17",
     "moment-timezone": "^0.5.11"
@@ -80,8 +80,8 @@
     "popper.js": "^1.12.9",
     "protractor": "~5.3.0",
     "rxjs": "^6.0.0",
-    "tempusdominus-bootstrap-4": "^5.0.0-alpha18",
-    "tempusdominus-core": "^5.0.0-alpha17",
+    "tempusdominus-bootstrap-4": "^5.0.0",
+    "tempusdominus-core": "^5.0.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
     "typescript": "~2.7.2",
