--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
-    "@types/jasmine": "~2.8.6",
+    "@types/jasmine": "2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "angular-cli-ghpages": "^0.5.2",
