--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,10 @@ dist: trusty
 
 language: node_js
 node_js:
-  - "8"
+    - 12.18.3
 
 install:
+  - sudo apt-get install -y dpkg
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
