--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "ng-packagr": "^2.4.4",
     "popper.js": "^1.12.9",
     "protractor": "~5.3.0",
-    "rxjs": "^6.0.0",
+    "rxjs": "6.0.0",
     "tempusdominus-bootstrap-4": "^5.0.0",
     "tempusdominus-core": "^5.0.0",
     "ts-node": "~5.0.1",
